tests/fixtures/realworld/istio/valid/case-052-RW-8-52-VirtualService-valid-with-CORS-policy.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cors-route
  namespace: default
spec:
  hosts:
  - api.example.com
  http:
  - corsPolicy:
      allowOrigins:
      - exact: example.com
      allowMethods:
      - GET
      - POST
    route:
    - destination:
        host: api-backend
        subset: v1
